WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242329
Assert that updating style doesn't trigger script execution
https://bugs.webkit.org/show_bug.cgi?id=242329
Summary
Assert that updating style doesn't trigger script execution
Ryosuke Niwa
Reported
2022-07-04 21:26:46 PDT
Now that autofocus doesn't get updated as a post style resolution callback and plugins are things of the past, there shouldn't be any mechanism by which scripts can interject themselves during style resolution.
Attachments
WIP
(1.08 KB, patch)
2022-07-04 21:26 PDT
,
Ryosuke Niwa
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
WIP - more aggressive
(2.13 KB, patch)
2022-07-04 21:29 PDT
,
Ryosuke Niwa
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
WIP
(2.13 KB, patch)
2022-07-16 12:25 PDT
,
Ryosuke Niwa
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-07-04 21:26:59 PDT
Created
attachment 460667
[details]
WIP
Ryosuke Niwa
Comment 2
2022-07-04 21:29:02 PDT
Created
attachment 460668
[details]
WIP - more aggressive
Ryosuke Niwa
Comment 3
2022-07-04 22:05:38 PDT
Sigh... HTMLObjectElement still updates DOM via updateWidget
Radar WebKit Bug Importer
Comment 4
2022-07-11 21:27:14 PDT
<
rdar://problem/96861280
>
Ryosuke Niwa
Comment 5
2022-07-16 12:25:42 PDT
Created
attachment 460956
[details]
WIP
Ryosuke Niwa
Comment 6
2022-07-17 13:56:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2497
EWS
Comment 7
2022-07-18 01:38:03 PDT
Committed
252564@main
(3c7828ddd501): <
https://commits.webkit.org/252564@main
> Reviewed commits have been landed. Closing PR #2497 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug