Assert that updating style doesn't trigger script execution https://bugs.webkit.org/show_bug.cgi?id=242329

Reviewed by Alan Bujtas.

This patch enacts ScriptDisallowedScope for the entirety of Document::resolveStyle.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::resolveStyle):

Canonical link: https://commits.webkit.org/252564@main